--- a/card.css
+++ b/card.css
@@ -4,6 +4,9 @@ body{
     padding: 40px;
     text-align: center;
 }
+h1{
+    text-decoration: line-through;
+}
 h2{
     font-family: fantasy;
 }
@@ -14,7 +17,7 @@ h2{
     border-radius: 10px;
     max-width: 400px;
     box-shadow: 0 10px 20px rgb(7, 7, 221);
-    transition: transform 0.4s background-color 0.4s ease;
+    transition: transform 0.4s background-color 0.4s ease-in-out;
 }
 .container:hover{
     background-color: khaki;
@@ -62,6 +65,7 @@ section{
 }
 section:hover{
     transform: skewX(10deg);
+    background-color: cyan;
 }
 section:target{
     display: block;
