--- a/card.css
+++ b/card.css
@@ -17,7 +17,7 @@ h2{
     border-radius: 10px;
     max-width: 400px;
     box-shadow: 0 10px 20px rgb(7, 7, 221);
-    transition: transform 0.4s background-color 0.4s ease-in-out;
+    transition: transform 0.3s background-color 0.3s ease;
 }
 .container:hover{
     background-color: khaki;
@@ -41,7 +41,7 @@ h2{
     border-radius: 10px;
     color: white;
     background-color: blue;
-    transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.3s ease;
 }
 .card-links a:hover{
     background-color: chocolate;
